tests/errors/phpdoc_tag_casing.php
<?php

declare(strict_types=1);

class InheritDocCasing extends \DateTimeImmutable
{
    /**
     * @inheritdoc
     */
    public function format($format): string
    {
    }
}
